# SyDerCal

./: .gitignore  CMakeLists.txt  README.md
include/: BinaryFunction.cpp  BinaryFunction.h  Const.cpp  Const.h  Cos.cpp  Cos.h  DerivableFunction.cpp  DerivableFunction.h  Exp.cpp  Exp.h  MulSimplifier.h  Sin.cpp  Sin.h  X.cpp
include/auxilliary/: LimitSide.h
include/binary/: AddFunction.h  BinaryFunction.h  DivFunction.h  MulFunction.h  PowFunction.h  SubFunction.h
include/func/: AddFunction.cpp  AddFunction.h  DivFunction.cpp  DivFunction.h  MulFunction.cpp  MulFunction.h  PowFunction.cpp  PowFunction.h  SubFunction.cpp  SubFunction.h
include/nullary/: Const.h  NullaryFunction.h  X.h
include/unary/: Const.h  Cos.h  Exp.h  Sin.h  UnaryFunction.h
src/: AddFunction.cpp  AddFunction.h  BinaryFunction.cpp  CMakeLists.txt  Const.cpp  Cos.cpp  DerivableFunction.cpp  DerivableFunction.h  DivFunction.cpp  DivFunction.h  Exp.cpp  MulFunction.cpp  MulFunction.h  MulSimplifier.cpp  PowFunction.cpp  PowFunction.h  Sin.cpp  SubFunction.cpp  SubFunction.h  X.cpp  X.h  main.cpp
src/binary/: AddFunction.cpp  BinaryFunction.cpp  DivFunction.cpp  MulFunction.cpp  PowFunction.cpp  SubFunction.cpp
src/func/: AddFunction.cpp  DivFunction.cpp  MulFunction.cpp  PowFunction.cpp  SubFunction.cpp
src/nullary/: Const.cpp  NullaryFunction.cpp  X.cpp
src/unary/: Const.cpp  Cos.cpp  Exp.cpp  Sin.cpp  UnaryFunction.cpp
